--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,11 @@ services:
       - ENV_VAR=example
     volumes:
       - ./app:/app
-  redis:
+    depends_on:
+      - recommendations_cache
+  recommendations_cache:
     image: "redis:alpine"
-    container_name: redis_cache
+    container_name: recommendations_cache
     restart: always
     ports:
       - "6379:6379"
